--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Product Landing Page</title>
   </head>
   <body>
+      <!-- header with logo at top -->
       <header id="header">
         <img id="header-img" src="https://eaknott.github.io/admin-dashboard/icons/hearguard-logo-design.png" alt="ear heart logo" width=270>
+        <!-- navbar with links for each main section on page -->
         <nav id="nav-bar">
           <ul>
             <li>
@@ -25,6 +27,7 @@
         </nav>
       </header>
       <div id="page-container">
+        <!-- main title section with hero form to grab information -->
        <section id="hero">
           <h1>Custom-molded ear protection</h1>
           <form action="https://www.freecodecamp.com/email-submit" id="form">
@@ -33,6 +36,7 @@
           </form>
         </section>
         <div class="container">
+          <!-- features section -->
           <section id="features" >
            <div class="grid">
               <div class="grid-icon"><i class="fa-solid fa-hand-holding-heart"></i></div>
@@ -56,9 +60,11 @@
               </div>
             </div>
           </section>
+          <!-- video link showcasing the product -->
           <section id="how-it-works" >
             <iframe id="video" frameborder="0" src="https://www.youtube.com/watch?v=MnlbnmyPm1k&ab_channel=Mack%27sEarplugs" allowfullscreen></iframe>
           </section>
+          <!-- shop products section -->
           <section id="shop-products">
            <div class="product" id="basic">
              <div class="product-title">BASIC</div>
@@ -103,6 +109,7 @@ Nam tempus, risus vel.</li>
               <button class="button">ADD TO CART <span><i class="fa-solid fa-cart-shopping"></i></span></button>
             </div>
          </section>
+         <!-- footer section -->
           <footer>
             <ul>
               <li>
